--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,10 @@ envlist = py26, py27, py34, py35
 [testenv]
 deps =
   pytest
+  pylint
   pytest-cov
   -r{toxinidir}/requirements.txt
 
 commands =
   pytest --cov={envsitepackagesdir}/stringz
+  pylint {envsitepackagesdir}/stringz
