--- a/tox.ini
+++ b/tox.ini
@@ -10,4 +10,4 @@ deps =
 
 commands =
   pytest --cov={envsitepackagesdir}/stringz
-  pylint {envsitepackagesdir}/stringz
+  pylint {toxinidir}/stringz
