--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,14 @@
 [tox]
-envlist = py26, py27, py34, py35
+envlist = py26, py27, py34, py35 ,pylint
 
 [testenv]
 deps =
   pytest
   pylint
   pytest-cov
-  -r{toxinidir}/requirements.txt
+  -rrequirements.txt
 
 commands =
   pytest --cov={envsitepackagesdir}/stringz
+  pylint --rcfile=tox.ini {project_module_dir}
   pylint {toxinidir}/stringz/__init__.py
