--- a/tox.ini
+++ b/tox.ini
@@ -10,5 +10,5 @@ deps =
 
 commands =
   pytest --cov={envsitepackagesdir}/stringz
-  pylint --rcfile=tox.ini {project_module_dir}
+  pylint --rcfile=tox.ini stringz
   pylint {toxinidir}/stringz/__init__.py
