--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py26, py27, py34, py35 ,pylint
 [testenv]
 deps =
   pytest
-  pylint
+  pylint: pylint
   pytest-cov
   -rrequirements.txt
 
